feat: 재학인증 관련 알림